# tiny-engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  doom.lua  duckhunt.lua  duckhunt3d.lua  fps_pombo.lua  gamepad.lua  pacman3d.lua
.github/workflows/: linux-ci.yml
docs/: RELATORIO_MACOS_JOYSTICK.md
docs/api/html/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  engine_8c.html  engine_8c.js  engine_8h.html  engine_8h.js  engine_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  input__map_8c.html  input__map_8c.js  input__map_8h.html  input__map_8h.js  input__map_8h_source.html  log_8c.html  log_8c.js  log_8h.html  log_8h.js  log_8h_source.html  lua__bindings_8c.html  lua__bindings_8c.js  lua__bindings_8h.html  lua__bindings_8h.js  lua__bindings_8h_source.html  main_8c.html  main_8c.js  menudata.js  (+15 more)
docs/api/html/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  defines_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  (+6 more)
src/: engine.c  engine.h  input_map.c  input_map.h  joystick.c  joystick.h  log.c  log.h  lua_bindings.c  lua_bindings.h  main.c  renderer.c  renderer.h  sdl_gyro.c  sdl_gyro.h
tests/: test_input_map.c  test_lua_bindings.c
